# BeRich

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pr-review.yml
.hermes/plans/: 2026-06-18_213222-yfinance-paper-mode.md
config/: settings.yaml  strategies.yaml
docs/: berich-critical-architecture-debate-2026-06-20.md
scripts/: _backtest_seed.py  adjust_split.py  backtest_rsi.py  backtest_stop_loss_comparison.py  backtest_trailing.py  migrate_strategy_configs.py  run_bot.py  run_dashboard.py
src/analytics/: __init__.py  drawdown.py  reports.py  statistics.py
src/bot/: __init__.py  _utils.py  core.py  dashboard_sync.py  data_loader.py  tick_handler.py  warmup.py
src/broker/: __init__.py  base.py  factory.py  paper.py  yfinance.py
src/core/: __init__.py  events.py  exceptions.py  types.py
tests/: conftest.py  test_analytics.py  test_backtest.py  test_bot.py  test_broker_base.py  test_broker_factory.py  test_broker_kis.py  test_config.py  test_core.py  test_dashboard_sync.py  test_data.py  test_execution.py  test_risk.py  test_rsi_rules.py  test_scheduler.py  test_strategy.py  test_strategy_config.py  test_strategy_engine.py  test_utils.py  test_warmup.py  test_web_candidates.py  test_web_menu.py  test_web_performance.py  test_web_positions.py  test_web_symbols.py  test_web_trade_logs.py  test_yfinance_broker.py  test_yfinance_integration.py
(+46 files in other folders)
